CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(arpblock)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
IF((DEFINED CXX) OR (DEFINED CMAKE_TOOLCHAIN_FILE))
  INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/../include)
  LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/../lib)
ENDIF()

SET(LIBPNET ${CMAKE_SOURCE_DIR}/../libpnet)
SET(LIBPNET_SOURCE ${LIBPNET}/src)
INCLUDE_DIRECTORIES(${LIBPNET}/include)

file(GLOB BASE_SOURCES "${LIBPNET_SOURCE}/*.cpp")
ADD_EXECUTABLE(${PROJECT_NAME} ${BASE_SOURCES} arpblock.cpp)
