CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(network_info)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

IF((DEFINED CXX) OR (DEFINED CMAKE_TOOLCHAIN_FILE))
  INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/../include)
  LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/../lib)
ENDIF()

SET(BASE_SOURCES pnetinfo.cpp)
ADD_EXECUTABLE(get_all_netinfo ${BASE_SOURCES} get_all_netinfo.cpp)

ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/test)
